release: sync fide assembly from fide/v0.0.0-alpha.7
